update favicon and meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hi,I'm Janis Adhikari,a Frontend Developer & SEO Specialist.">
+    <meta name="title" content="Janis Adhikari" />
+    <meta name="keyword" content="portfolio, javascript, developer,janis,adhikari,janis adhikari,seo ,frontend">
     <title>Janis Adhikari</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="./style.css">
@@ -13,6 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Graduate&family=Rajdhani:wght@300;400;500;600;700&family=Smooch+Sans:wght@100..900&display=swap"
         rel="stylesheet">
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -162,7 +166,7 @@
                 <div class="blank"></div>
                 <h1 class="topic"><i style="color: #7700ff;" class="fa   fa-address-card"></i> Contact</h1>
                 <p class="big-text"><span>Contact</span> me,</p>
-                <form action="#">
+                <form action="#" method="post">
                     <input type="text" id="name" name="name" placeholder="Name:">
                     <input type="email" id="email" name="email" placeholder="Email:">
                     <textarea name="" id="" cols="30" rows="10" placeholder="Write your message:"></textarea>
