new titles changes in nav links

--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
             <div class="content-side">
                 <nav>
                     <ul>
-                        <li> <a href="#intro " class="active"><i class="fa fa-2x  fa-house"></i></a></li>
-                        <li><a href="#about"><i class="fa fa-2x  fa-user"></i></a></li>
-                        <li> <a href="#skills"><i class="fa fa-2x  fa-code"></i></a></li>
-                        <li> <a href="#projects"><i class="fa fa-2x  fa-laptop-code"></i></a></li>
-                        <li> <a href="#contact"><i class="fa fa-2x fa-address-card"></i></a></li>
-
+                        <li> <a href="#intro " class="active" title="Intro"><i class="fa fa-2x  fa-house"></i></a></li>
+                        <li><a href="#about" title="About"><i class="fa fa-2x  fa-user"></i></a></li>
+                        <li> <a href="#skills" title="Skills"><i class="fa fa-2x  fa-code"></i></a></li>
+                        <li> <a href="#projects" title="Projects"><i class="fa fa-2x  fa-laptop-code"></i></a></li>
+                        <li> <a href="#contact" title="Contact"><i class="fa fa-2x fa-address-card"></i></a></li>
                     </ul>
                 </nav>
                 <div class="side-container ">
