--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="border1"></div>
                     <div class="pfp">
-                        <img src="/profile-pic.png" alt="">
+                        <img src="/profile-pic1.png" alt="">
                     </div>
                     <div class="social">
                         <a href="https://www.facebook.com/janisadhi" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -164,10 +164,10 @@
                 <div class="blank"></div>
                 <h1 class="topic"><i style="color: #7700ff;" class="fa   fa-address-card"></i> Contact</h1>
                 <p class="big-text"><span>Contact</span> me,</p>
-                <form action="#" method="post">
+                <form  method="post">
                     <input type="text" id="name" name="name" placeholder="Name:">
                     <input type="email" id="email" name="email" placeholder="Email:">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Write your message:"></textarea>
+                    <textarea name="message" id="" cols="30" rows="10" placeholder="Write your message:"></textarea>
                     <button class="btn-contact" style="width:80% ;border:none;">Submit</button>
                 </form>
 
