major change in website4

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Graduate&family=Rajdhani:wght@300;400;500;600;700&family=Smooch+Sans:wght@100..900&display=swap"
         rel="stylesheet">
-        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -46,8 +46,10 @@
                         <a href="https://www.facebook.com/janisadhi" target="_blank"><i class="fab fa-facebook"></i></a>
                         <a href="https://github.com/janisadhi" target="_blank"><i class="fab fa-github"></i></a>
                         <a href="https://twitter.com/@janis_adhikari" target="_blank"><i class="fab fa-twitter"></i></a>
-                        <a href="https://www.instagram.com/janisadhikari" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/janis-adhikari-053347263/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.instagram.com/janisadhikari" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
+                        <a href="https://www.linkedin.com/in/janis-adhikari-053347263/" target="_blank"><i
+                                class="fab fa-linkedin"></i></a>
                         <a href="https://discord.com" target="_blank"><i class="fab fa-discord"></i></a>
                     </div>
                     <a href="#contact" class="btn-contact">Contact Me</a>
@@ -59,10 +61,10 @@
         <!-- content Area -->
         <div class="content">
             <div class="blank" id="intro"></div>
-            <section >
+            <section>
                 <h1 class="topic"><i style="color: #7700ff;" class="fa   fa-house"></i> Indroduction</h1>
-                <p class="big-text">Hi,<br> I'm <span>Janis Adhikari</span>,<br> a <span>Frontend Developer</span> &
-                    <span> SEO <br>Specialist</span>.
+                <p class="big-text">Hi,<br> I'm <span>Janis Adhikari</span>,<br> a <span>DevOps Engineer</span> &
+                    <span> Frontend <br>Developer</span>.
                 </p>
 
             </section>
@@ -70,10 +72,11 @@
                 <div class="blank"></div>
                 <h1 class="topic"><i style="color: #7700ff;" class="fa   fa-user"></i> About</h1>
                 <p class="about-text">
-                    Greetings! I'm Janis Adhikari, a passionate and results-driven Frontend Developer and SEO Specialist
-                    with a keen eye for detail and a commitment to creating seamless user experiences. With a solid
-                    foundation in frontend technologies and a deep understanding of search engine optimization, I bring
-                    a unique blend of creativity and technical expertise to every project.
+                    Greetings! I'm Janis Adhikari, a passionate and results-driven DevOps Engineer and Frontend
+                    Developer with a keen eye for detail and a commitment to creating seamless user experiences. With a
+                    solid foundation in DevOps practices, frontend technologies, and a deep understanding of optimizing
+                    workflows and user interfaces, I bring a unique blend of creativity and technical expertise to every
+                    project.
                 </p>
 
 
@@ -90,6 +93,56 @@
                     My <span>skills</span>,
                 </p>
                 <div class="containerSkills">
+                    <div class="skillbox">
+                        <i class="fa-brands fa-docker fa-5x"></i>
+                        <h2>Docker</h2>
+                    </div>
+
+                    <div class="skillbox">
+                        <i class="fa-brands fa-git fa-5x"></i>
+                        <h2>Git</h2>
+                    </div>
+
+                    <div class="skillbox">
+                        <i class="fa-brands fa-github fa-5x"></i>
+                        <h2>GitHub Actions</h2>
+                    </div>
+
+                    <div class="skillbox">
+                        <i class="fa fa-terraform fa-5x"></i>
+                        <h2>Terraform</h2>
+                    </div>
+
+                    <div class="skillbox">
+                        <i class="fa-brands fa-aws fa-5x"></i>
+                        <h2>AWS</h2>
+                    </div>
+
+                    <div class="skillbox">
+                        <i class="fa-brands fa-nginx fa-5x"></i>
+                        <h2>Nginx</h2>
+                    </div>
+
+                    <div class="skillbox">
+                        <i class="fa fa-docker fa-5x"></i>
+                        <h2>Docker Hub</h2>
+                    </div>
+
+                    <div class="skillbox">
+                        <i class="fa fa-jenkins fa-5x"></i>
+                        <h2>Jenkins</h2>
+                    </div>
+
+                    <div class="skillbox">
+                        <i class="fa fa-linux fa-5x"></i>
+                        <h2>Linux</h2>
+                    </div>
+
+                    <div class="skillbox">
+                        <i class="fa fa-terminal fa-5x"></i>
+                        <h2>Shell Scripting</h2>
+                    </div>
+
 
                     <div class="skillbox">
                         <i class="fa-brands fa-html5 fa-5x"></i>
@@ -138,22 +191,125 @@
                 </div>
             </section>
 
+
+
+
+            <section id="devops-projects">
+                <div class="blank"></div>
+                <h1 class="topic"><i style="color: #7700ff;" class="fa fa-cogs"></i> DevOps Projects</h1>
+                <p class="big-text">
+                    My <span>DevOps Projects</span>,
+                </p>
+                <div class="project-cards">
+                    <!-- Nginx Log Analyser -->
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>Nginx Log Analyser</h2>
+                            <p>Simple script to analyse the nginx log file.</p>
+                            <a href="https://github.com/janisadhi/Nginx_Log_Analyser" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
+
+                    <!-- Static Site Server -->
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>Static Site Server</h2>
+                            <p>Simple guide to create a server for a static site using nginx and deploying using rsync.
+                            </p>
+                            <a href="https://github.com/janisadhi/Static_Site_Server" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
+
+                    <!-- Dummy Systemd Service -->
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>Dummy Systemd Service</h2>
+                            <p>Dummy service of linux for practice with systemd.</p>
+                            <a href="https://github.com/janisadhi/Dummy_Systemd_Service" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
+
+                    <!-- Terraform Provisioning -->
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>Terraform Provisioning</h2>
+                            <p>Terraform Infrastructure as a code to create resources at AWS.</p>
+                            <a href="https://github.com/janisadhi/Terraform_Provisioning" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
+
+                    <!-- EC2 Instance -->
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>EC2 Instance</h2>
+                            <p>Guide to create EC2 instance, SSH connection, and install nginx.</p>
+                            <a href="https://github.com/janisadhi/Ec2_Instance" target="_blank" class="btn-github">View
+                                on GitHub</a>
+                        </div>
+                    </div>
+
+                    <!-- Basic Dockerfile -->
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>Basic Dockerfile</h2>
+                            <p>Simple docker file to containerize an application.</p>
+                            <a href="https://github.com/janisadhi/Basic_Dockerfile" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
+
+                    <!-- SSH Remote Server Setup -->
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>SSH Remote Server Setup</h2>
+                            <p>SSH connection guide to connect to a remote server securely.</p>
+                            <a href="https://github.com/janisadhi/SSH_Remote_Server_Setup" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
+
+                    <!-- Log Archive Tool -->
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>Log Archive Tool</h2>
+                            <p>Simple script that creates an archive of log files in a compressed form.</p>
+                            <a href="https://github.com/janisadhi/Log_Archive_Tool" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
+
+                    <!-- Server Performance Stats -->
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>Server Performance Stats</h2>
+                            <p>Simple script to check server performance and resources stats.</p>
+                            <a href="https://github.com/janisadhi/Server_Performance_Stats" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
+
+
+                </div>
+            </section>
+
             <section id="projects">
                 <div class="blank"></div>
-                <h1 class="topic"><i style="color: #7700ff;" class="fa   fa-laptop-code"></i> Projects</h1>
+                <h1 class="topic"><i style="color: #7700ff;" class="fa   fa-laptop-code"></i> Frontend Projects</h1>
                 <p class="big-text">
-                    My <span>Projects</span>,
+                    My <span>Frontend Projects</span>,
                 </p>
                 <div class="project-card">
 
-                    <iframe src="https://mafd.000webhostapp.com/index.php" frameborder="1" scrolling="auto" loading="lazyframe"></iframe>
-                    <iframe src="https://janisadhikari.netlify.app/" frameborder="1" scrolling="auto" loading="lazyframe"></iframe>
+                    <iframe src="https://mafd.000webhostapp.com/index.php" frameborder="1" scrolling="auto"
+                        loading="lazyframe"></iframe>
+                    <iframe src="https://janisadhikari.netlify.app/" frameborder="1" scrolling="auto"
+                        loading="lazyframe"></iframe>
 
-                    <!-- <div class="project-description">
-                        <h1>Football Academy website</h1>
-                        <p>Tags:</p>
-                        <p></p>
-                    </div> -->
+
                 </div>
 
 
@@ -164,7 +320,7 @@
                 <div class="blank"></div>
                 <h1 class="topic"><i style="color: #7700ff;" class="fa   fa-address-card"></i> Contact</h1>
                 <p class="big-text"><span>Contact</span> me,</p>
-                <form  method="post">
+                <form method="post">
                     <input type="text" id="name" name="name" placeholder="Name:">
                     <input type="email" id="email" name="email" placeholder="Email:">
                     <textarea name="message" id="" cols="30" rows="10" placeholder="Write your message:"></textarea>
