--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="side-container ">
                     <div class="namecard">
                         <h1>Janis Adhikari</h1>
-                        <span>Frontend developer</span>
+                        <span>DevOps</span>
                     </div>
                     <div class="border1"></div>
                     <div class="pfp">
