--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
 
 
-            <section id="devops-projects">
+            <section id="projects">
                 <div class="blank"></div>
                 <h1 class="topic"><i style="color: #7700ff;" class="fa fa-cogs"></i> DevOps Projects</h1>
                 <p class="big-text">
