add new project

--- a/index.html
+++ b/index.html
@@ -210,6 +210,14 @@
                                 class="btn-github">View on GitHub</a>
                         </div>
                     </div>
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>GitHub Pages Deployment</h2>
+                            <p>GitHub Pages Deploymen </p>
+                            <a href="https://github.com/janisadhi/Github_Pages_Deployment" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
 
                     <!-- Static Site Server -->
                     <div class="project-card">
