--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <div class="project-card">
                         <div class="card-content">
                             <h2>GitHub Pages Deployment</h2>
-                            <p>GitHub Pages Deploymen </p>
+                            <p>deploying static page using githubpage , CI/CD #github-actions </p>
                             <a href="https://github.com/janisadhi/Github_Pages_Deployment" target="_blank"
                                 class="btn-github">View on GitHub</a>
                         </div>
