--- a/index.html
+++ b/index.html
@@ -299,7 +299,14 @@
                                 class="btn-github">View on GitHub</a>
                         </div>
                     </div>
-
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>Dockerized Service</h2>
+                            <p>simle dockerized service deployment </p>
+                            <a href="https://github.com/janisadhi/Dockerized_Service" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
 
                 </div>
             </section>
