new project added

--- a/index.html
+++ b/index.html
@@ -307,6 +307,14 @@
                                 class="btn-github">View on GitHub</a>
                         </div>
                     </div>
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>Ansible Playbook to Install Docker</h2>
+                            <p>ansible playbook to install docker in production server </p>
+                            <a href="https://github.com/janisadhi/Ansible_Playbook_Install_Docker" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
 
                 </div>
             </section>
