new project : configuration_management

--- a/index.html
+++ b/index.html
@@ -315,6 +315,14 @@
                                 class="btn-github">View on GitHub</a>
                         </div>
                     </div>
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>Configuration_Management</h2>
+                            <p>Ansible playbook to configure a Linux server according to requirements </p>
+                            <a href="https://github.com/janisadhi/Configuration_Management" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
 
                 </div>
             </section>
