--- a/index.html
+++ b/index.html
@@ -323,6 +323,15 @@
                                 class="btn-github">View on GitHub</a>
                         </div>
                     </div>
+                    <div class="project-card">
+                        <div class="card-content">
+                            <h2>Prometheus_and_Grafana_Setup</h2>
+                            <p> A Guide to Setup Prometheus and grafana to a server </p>
+                            <a href="https://github.com/janisadhi/Prometheus_and_Grafana_Setup" target="_blank"
+                                class="btn-github">View on GitHub</a>
+                        </div>
+                    </div>
+
 
                 </div>
             </section>
