--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                 </p>
                 <div class="project-card">
 
-                    <iframe src="https://mafd.000webhostapp.com/index.php" frameborder="1" scrolling="auto"
+                    <iframe src="https://janis.com.np" frameborder="1" scrolling="auto"
                         loading="lazyframe"></iframe>
                     <iframe src="https://janisadhikari.netlify.app/" frameborder="1" scrolling="auto"
                         loading="lazyframe"></iframe>
